php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32608 html_entity_decode converts single quotes even if ENT_NOQUOTES is given
Submitted: 2005-04-06 16:32 UTC Modified: 2005-05-03 03:11 UTC
From: ladislav dot prosek at matfyz dot cz Assigned:
Status: Closed Package: Strings related
PHP Version: 5CVS-2005-04-07 OS: *
Private report: No CVE-ID: None
 [2005-04-06 16:32 UTC] ladislav dot prosek at matfyz dot cz
Description:
------------
html_entity_decode seems to convert single quotes (' and ') regardless of the quote_style parameter.

Reproduce code:
---------------
echo html_entity_decode("'", ENT_NOQUOTES);

Expected result:
----------------
'

Actual result:
--------------
'

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-04-08 00:14 UTC] sniper@php.net
Only in PHP 5 (works fine with latest PHP_4_3 checkout)

 [2005-05-03 03:11 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC