Fixed bug #32608 (html_entity_decode() converts single quotes even if ENT_NOQUOTES is given).